# taskserver

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Dockerfile  INSTALL  LICENSE  NEWS  README  README.md  cmake.h.in  example-config
demo/: .gitignore  README  run.client  run.server  run.setup  run.use.case.1  run.use.case.2  run.use.case.3  run.use.case.4  run.use.case.5  run.use.case.6  stats.0  sync.1
demo/client/: .gitignore  case1  case2  case3  case4  case5  case6  case7  case7a  case8  malformed1  run  setup  stats.0  sync.1
demo/server/: .gitignore  run  setup
doc/: CMakeLists.txt  api.txt  client.txt  extensions.txt  operation.txt  protocol.txt  request.txt  sync.txt  task.txt  template.txt
doc/man/: taskd.1.in  taskdctl.1.in  taskdrc.5.in
ext/: README
mon/: README  create  graph  stats.request  update
pki/: .gitignore  README  check_expire  generate  generate.ca  generate.client  generate.crl  generate.server  vars
scripts/: i_cant_follow_instructions.bash  profile.py  setup_server.bash
scripts/systemd/: taskd.service
src/: .gitignore  CMakeLists.txt  Color.cpp  Color.h  ConfigFile.cpp  ConfigFile.h  Database.cpp  Database.h  Date.cpp  Date.h  Directory.cpp  Directory.h  Duration.cpp  Duration.h  FS.cpp  FS.h  File.cpp  File.h  ISO8601.cpp  ISO8601.h  JSON.cpp  JSON.h  Log.cpp  Log.h  Msg.cpp  Msg.h  Nibbler.cpp  Nibbler.h  Path.cpp  Path.h  ProxyServer.cpp  ProxyServer.h  RX.cpp  RX.h  Server.cpp  Server.h  Socket.cpp  Socket.h  TCPServer.cpp  TCPServer.h  (+32 more)
src/l10n/: eng-USA.h
src/tls/: .gitignore  Makefile  README  Socket.cpp  Socket.h  TLSClient.cpp  TLSClient.h  TLSServer.cpp  TLSServer.h  build  c.cpp  s.cpp  text.cpp  text.h
src/tls/pki/: build
test/: .gitignore  CMakeLists.txt  add.t  add_group.t  add_org.t  add_user.t  bug.1397.t  color.t.cpp  config.t.cpp  config2.t  conversion  date.t.cpp  directory.t.cpp  duration.t.cpp  file.t.cpp  fs.t.cpp  init.t  iso8601d.t.cpp  iso8601p.t.cpp  json.t.cpp  json_test.cpp  json_test.t  lexer.t.cpp  msg.t.cpp  nibbler.t.cpp  org.t  path.t.cpp  problems  remove_group.t  remove_org.t  remove_user.t  resume_group.t  resume_org.t  resume_user.t  run_all  run_all.in  rx.t.cpp  suspend_group.t  suspend_org.t  suspend_user.t  (+9 more)
test/basetest/: __init__.py  hooks.py  task.py  taskd.py  utils.py
test/test_certs/: ca.cert.pem  ca.key.pem  client.cert.pem  client.key.pem  server.cert.pem  server.crl.pem  server.key.pem  test_client.cert.pem  test_client.key.pem
